# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: pyci.yml
gendiff/: __main__.py  diff_builder.py  diff_generator.py  gendiff.py  generate_diff.py  parser.py  test_compare_json.py  test_yaml.py
gendiff/examples/: file1.json   file2.json   file2.yml
gendiff/formatters/: format.py  plain.py  stylish.py  yaml.py
gendiff/scripts/: diff_builder.py  diff_generator.py  gendiff.py  generate_diff.py  parser.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_compare_json.py  test_gendiff.py  test_yaml.py
tests/tests_data/: file1.json
