[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
